--- a/kontak.html
+++ b/kontak.html
@@ -58,7 +58,7 @@
     <input type="hidden" name="_captcha" value="false">
     
     <!-- Redirect setelah kirim -->
-    <input type="hidden" name="_next" value="https://iamxy002.github.io/porto/thankyou.html">
+    <input type="hidden" name="_next" value="https://iamxy002.github.io/folio1/thankyou.html">
 
     <button type="submit">Kirim</button>
   </form>
